# Distcomp

351001/Betenya/: docker-compose.yml
351001/Budnikov/publisher/: Dockerfile  pyproject.toml
351001/Budnikov/publisher/src/: main.py
351001/Budnikov/publisher/src/api/v1/: router.py
351001/Budnikov/publisher/src/config/: __init__.py  database.py
351001/Budnikov/publisher/src/core/: exceptions.py
351001/Budnikov/publisher/src/dependencies/: services.py
351001/Budnikov/publisher/src/models/: __init__.py  editor.py  issue.py  label.py
351001/Budnikov/publisher/src/schemas/: dto.py
351001/Budnikov/publisher/src/services/: __init__.py  base.py  editor.py  issue.py  label.py  post.py
351002/Yarakhovich/: Cargo.toml  docker-compose.yml
351002/Yarakhovich/db/: init.sql
351002/Yarakhovich/lab1/: Cargo.toml
351002/Yarakhovich/lab1/src/: main.rs
351002/Yarakhovich/lab1/src/service/: editor.rs  label.rs  message.rs  story.rs
351002/Yarakhovich/lab2/: Cargo.toml
351002/Yarakhovich/lab2/src/: main.rs
351002/Yarakhovich/lab2/src/service/: editor.rs  label.rs  message.rs  story.rs
351002/Yarakhovich/lab3/discussion/: Cargo.toml
351002/Yarakhovich/lab3/discussion/src/: main.rs
351002/Yarakhovich/lab3/discussion/src/service/: message.rs  mod.rs
351002/Yarakhovich/lab3/publisher/: Cargo.toml
351002/Yarakhovich/lab3/publisher/src/: main.rs
351002/Yarakhovich/lab3/publisher/src/service/: message.rs  mod.rs
351002/Yarakhovich/lab4/discussion/: Cargo.toml
351002/Yarakhovich/lab4/discussion/src/service/: message.rs
351002/Yarakhovich/lab4/publisher/: Cargo.toml
351002/Yarakhovich/lab4/publisher/src/: main.rs
351002/Yarakhovich/lab4/publisher/src/service/: message.rs
351002/Yarakhovich/lab5/discussion/: Cargo.toml
351002/Yarakhovich/lab5/publisher/: Cargo.toml
351002/Yarakhovich/lab5/publisher/src/: main.rs
351002/Yarakhovich/lab5/publisher/src/service/: label.rs  mod.rs  story.rs
351002/Yarakhovich/lab6/discussion/: Cargo.toml
351002/Yarakhovich/lab6/discussion/src/: kafka_types.rs  main.rs
351002/Yarakhovich/lab6/discussion/src/service/: mod.rs
351002/Yarakhovich/lab6/publisher/: Cargo.toml
351002/Yarakhovich/lab6/publisher/src/service/: editor.rs
351002/Yarakhovich/lab6/server/: Cargo.toml
351002/Yarakhovich/lab6/server/src/: main.rs
351002/Yarakhovich/lib/common/: Cargo.toml
351002/Yarakhovich/lib/common/src/: lib.rs
351002/Yarakhovich/lib/common/src/dto/: editor.rs  label.rs  message.rs  mod.rs  story.rs
351002/Yarakhovich/lib/domain/: Cargo.toml
351002/Yarakhovich/lib/domain/src/entities/: editor.rs  label.rs  message.rs  mod.rs  story.rs
351002/Yarakhovich/lib/storage/: Cargo.toml
351002/Yarakhovich/lib/storage/src/: lib.rs
351002/Yarakhovich/lib/storage/src/cassandra/: message.rs
351002/Yarakhovich/lib/storage/src/in_memory/: editor.rs  label.rs  message.rs  mod.rs  story.rs
351002/Yarakhovich/lib/storage/src/postgres/: editor.rs  label.rs  message.rs  mod.rs  story.rs
351002/Yarakhovich/lib/storage/src/redis/: message.rs  mod.rs
351003/Gornik/app/: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
351003/Gornik/app/alembic/: env.py
351003/Gornik/app/alembic/versions/: 0287fbb6e301_change_ids.py  9a4fd6f5be88_rename_name_columns_in_writers_table.py
351003/Gornik/app/discussion/: Dockerfile  database.py  dto.py  kafka_handler.py  main.py  pyproject.toml
351003/Gornik/app/discussion/config/: settings.py
351003/Gornik/app/discussion/routers/: comment.py
351003/Gornik/app/src/: auth.py  database.py  dto.py  kafka_handler.py  logger.py  main.py  models.py  redis_cache.py
351003/Gornik/app/src/config/: settings.py
351003/Gornik/app/src/routers/: comment.py  db_router.py  sticker.py  tweet.py  v2_auth.py  v2_comment.py  v2_sticker.py  v2_tweet.py  v2_writer.py  writer.py
351003/Naskevich/: .gitignore  alembic.ini  docker-compose.yaml  pyproject.toml
351003/Naskevich/src/: config.py  exceptions.py
351003/Naskevich/src/api/: dependencies.py  main.py  posts_kafka.py
351003/Naskevich/src/api/v1/: editors.py  markers.py  posts.py  tweets.py
351003/Naskevich/src/api/v2/: auth.py  deps.py  editors.py  errors.py  markers.py  posts.py  tweets.py
351003/Naskevich/src/cache/: keys.py  redis_cache.py
351003/Naskevich/src/database/: pool.py  tables.py  uow.py
351003/Naskevich/src/database/migrations/: env.py
351003/Naskevich/src/database/migrations/versions/: 4e9ee2df7c29_initial.py  b3a1c0d9e8f7_drop_tbl_post.py  d8f9e2a1b3c4_editor_role_and_password.py
351003/Naskevich/src/database/repositories/: __init__.py  base.py  editor.py  marker.py  post.py  tweet.py
351003/Naskevich/src/discussion/: cassandra_holder.py  main.py  moderation.py  posts_kafka.py  publisher_client.py  schema.py
351003/Naskevich/src/discussion/api/: dependencies.py  posts.py
351003/Naskevich/src/discussion/repositories/: __init__.py  post.py
351003/Naskevich/src/discussion/services/: post.py
351003/Naskevich/src/dto/: ___init__.py  auth.py  editor.py  marker.py  post.py  tweet.py
351003/Naskevich/src/messaging/: partition_key.py  post_adapters.py  post_messages.py  reply_waiter.py  topics.py
351003/Naskevich/src/models/: editor.py  marker.py  post.py  post_state.py  tweet.py  user_role.py
351003/Naskevich/src/repositories/: __init__.py  editor.py  marker.py  post.py  tweet.py
351003/Naskevich/src/security/: jwt_tokens.py  passwords.py
351003/Naskevich/src/services/: auth_service.py  editor.py  marker.py  post.py  tweet.py
351004/Lazuta/services/auth/: CMakeLists.txt
351004/Lazuta/services/auth/config/app/: config.json
351004/Lazuta/services/auth/src/: main.cpp
351004/Lazuta/services/auth/src/exceptions/: AuthException.h  DatabaseError.h
351004/Lazuta/services/auth/src/models/: TblEditor.cc
351004/Lazuta/services/discussion/: CMakeLists.txt
351004/Lazuta/services/discussion/src/: main.cpp
351004/Lazuta/services/publisher/: CMakeLists.txt
351004/Lazuta/services/publisher/migrations/: liquibase.properties
351004/Lazuta/services/publisher/src/: main.cpp
(+7973 files in other folders)
