[project]
name = "rv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.2",
    "asyncpg>=0.31.0",
    "fastapi>=0.128.0",
    "hypercorn>=0.18.0",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
    "httpx>=0.28.0",
    "aiokafka>=0.9.0",
    "redis>=5.0.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
]
