[package]
name = "lab5_publisher"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
axum = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
tokio = {workspace = true}
sqlx = {workspace = true}
rdkafka = {workspace = true}
tokio-stream = {workspace = true}
uuid = {workspace = true}
redis = {workspace = true}

common = {workspace = true}
storage = {workspace = true, features = ["postgres"]}
domain = {workspace = true}
validator = "0.20.0"
reqwest = "0.13.3"
