[package]
name = "storage"
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
default = ["postgres"]
in_memory = ["dashmap"]
postgres = ["sqlx"]
cassandra = ["scylla"]

[dependencies]
domain = {workspace = true}

chrono = {workspace = true}
tokio = {workspace = true}
scylla = {workspace = true, optional = true}
sqlx = {workspace = true, optional = true}
dashmap = {version = "6.1.0", optional = true}
redis = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
tracing = "0.1.44"
