[project]
name = "discussion"
version = "0.1.0"
description = "Discussion microservice — Comment CRUD with Cassandra"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "cassandra-driver>=3.29.0",
    "pydantic-settings>=2.12.0",
    "aiokafka>=0.9.0",
]
